// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OTP Input Change Value 1`] = `
<body>
  <div>
    <div
      class="flex w-full flex-col "
    >
      <div
        class="flex justify-between [&>div]:mr-6 "
      >
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-0"
            id="otpInputs-0"
            inputmode="decimal"
            name="otpInputs-0"
            pattern="[0-9]*"
            placeholder=""
            value=""
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-1"
            id="otpInputs-1"
            inputmode="decimal"
            name="otpInputs-1"
            pattern="[0-9]*"
            placeholder=""
            value="2"
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-2"
            id="otpInputs-2"
            inputmode="decimal"
            name="otpInputs-2"
            pattern="[0-9]*"
            placeholder=""
            value="5"
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-3"
            id="otpInputs-3"
            inputmode="decimal"
            name="otpInputs-3"
            pattern="[0-9]*"
            placeholder=""
            value="8"
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-4"
            id="otpInputs-4"
            inputmode="decimal"
            name="otpInputs-4"
            pattern="[0-9]*"
            placeholder=""
            value="6"
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            !border-border-action-focused shadow-border-brand-focus-ring shadow-[0px_0px_0px_4px]
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-5"
            id="otpInputs-5"
            inputmode="decimal"
            name="otpInputs-5"
            pattern="[0-9]*"
            placeholder=""
            value="2"
          />
        </div>
      </div>
      <div
        class="paragraph-extra-small mt-1
              text-text-light
            "
      >
        This is helper Text
      </div>
    </div>
  </div>
</body>
`;

exports[`OTP Input Snapshot Test 1`] = `
<body>
  <div>
    <div
      class="flex w-full flex-col "
    >
      <div
        class="flex justify-between [&>div]:mr-6 "
      >
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            !border-border-action-focused shadow-border-brand-focus-ring shadow-[0px_0px_0px_4px]
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-0"
            id="otpInputs-0"
            inputmode="decimal"
            name="otpInputs-0"
            pattern="[0-9]*"
            placeholder=""
            value=""
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-1"
            id="otpInputs-1"
            inputmode="decimal"
            name="otpInputs-1"
            pattern="[0-9]*"
            placeholder=""
            value=""
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-2"
            id="otpInputs-2"
            inputmode="decimal"
            name="otpInputs-2"
            pattern="[0-9]*"
            placeholder=""
            value=""
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-3"
            id="otpInputs-3"
            inputmode="decimal"
            name="otpInputs-3"
            pattern="[0-9]*"
            placeholder=""
            value=""
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-4"
            id="otpInputs-4"
            inputmode="decimal"
            name="otpInputs-4"
            pattern="[0-9]*"
            placeholder=""
            value=""
          />
        </div>
        <div
          aria-label=""
          class="undefined last:mr-0 w-11 border-border-border focus-within:border-border-action-focused focus-within:shadow-border-brand-focus-ring focus-within:shadow-[0px_0px_0px_4px]  relative h-12 rounded-lg border border-solid px-4 py-3 
            
            
            
            flex items-center hover:cursor-text
          "
          role="textbox"
          tabindex="-1"
        >
          <input
            class="text-center undefined  paragraph-medium text-text-text placeholder-text-light w-full align-top focus:outline-none "
            data-testid="otpInputs-5"
            id="otpInputs-5"
            inputmode="decimal"
            name="otpInputs-5"
            pattern="[0-9]*"
            placeholder=""
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
